--- a/webwthr-main/server/package.json
+++ b/webwthr-main/server/package.json
@@ -9,25 +9,19 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.57.4",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
-    "@types/qrcode": "^1.5.5",
-    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "qrcode": "^1.5.4",
     "sodium-native": "^3.4.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.0",
-    "whatsapp-web.js": "^1.34.1"
+    "typescript": "^5.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
-    "@types/qrcode": "^1.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.0"
   }
